--- a/NMNearByPlaces/Base.lproj/Main.storyboard
+++ b/NMNearByPlaces/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3QH-2Z-PGR">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,153 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ft7-1E-WeT">
+                                <rect key="frame" x="0.0" y="134" width="600" height="466"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="aHg-qG-ArY"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="gUR-dl-Hsm"/>
+                                </connections>
+                            </tableView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kEz-jI-TnU">
+                                <rect key="frame" x="108" y="84" width="384" height="31"/>
+                                <connections>
+                                    <action selector="ChangeDistance:" destination="BYZ-38-t0r" eventType="valueChanged" id="HFe-my-on8"/>
+                                </connections>
+                            </slider>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="kEz-jI-TnU" secondAttribute="trailing" constant="90" id="2JS-4F-3XO"/>
+                            <constraint firstItem="Ft7-1E-WeT" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="70" id="DBP-d6-ptO"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ft7-1E-WeT" secondAttribute="bottom" id="IrI-uv-teM"/>
+                            <constraint firstItem="Ft7-1E-WeT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="QE6-Kq-mqo"/>
+                            <constraint firstItem="kEz-jI-TnU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="SNH-td-EoX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ft7-1E-WeT" secondAttribute="trailing" constant="-20" id="pEL-mI-UPo"/>
+                            <constraint firstItem="kEz-jI-TnU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="90" id="xJq-OU-lZG"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="IbV-4U-c3B"/>
+                    <connections>
+                        <outlet property="tablePlaceType" destination="Ft7-1E-WeT" id="jlk-mI-fhb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-731" y="319"/>
+        </scene>
+        <!--Place List View Controller-->
+        <scene sceneID="4Sa-vW-8IO">
+            <objects>
+                <viewController storyboardIdentifier="PlaceListViewController" id="I4K-mU-CHz" customClass="PlaceListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jgb-ua-mpl"/>
+                        <viewControllerLayoutGuide type="bottom" id="07R-js-Rjs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ou0-uT-YXe">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hMI-1D-aou">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="I4K-mU-CHz" id="syf-8n-iCT"/>
+                                    <outlet property="delegate" destination="I4K-mU-CHz" id="tnW-dz-x9R"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="hMI-1D-aou" secondAttribute="trailing" constant="-20" id="1dA-OZ-Oy0"/>
+                            <constraint firstItem="hMI-1D-aou" firstAttribute="top" secondItem="Jgb-ua-mpl" secondAttribute="bottom" id="9u4-lA-4EF"/>
+                            <constraint firstItem="07R-js-Rjs" firstAttribute="top" secondItem="hMI-1D-aou" secondAttribute="bottom" id="X8g-kd-lzG"/>
+                            <constraint firstItem="hMI-1D-aou" firstAttribute="leading" secondItem="ou0-uT-YXe" secondAttribute="leadingMargin" constant="-20" id="vgk-vd-fkO"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Gej-Wa-Ef1"/>
+                    <connections>
+                        <outlet property="tableViewPlaceList" destination="hMI-1D-aou" id="bGX-Ll-bj3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="myV-JY-CtY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7" y="337"/>
+        </scene>
+        <!--Place Detail View Controller-->
+        <scene sceneID="ZqR-aN-vkd">
+            <objects>
+                <viewController storyboardIdentifier="aceDetailViewController" id="U2o-7E-f7I" customClass="PlaceDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tL7-P1-DMI"/>
+                        <viewControllerLayoutGuide type="bottom" id="Xxk-Bb-DCi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kXq-D5-RDM">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9qQ-Go-fp3">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="U2o-7E-f7I" id="W1Y-sw-NxR"/>
+                                    <outlet property="delegate" destination="U2o-7E-f7I" id="6BF-2S-GeM"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9qQ-Go-fp3" firstAttribute="leading" secondItem="kXq-D5-RDM" secondAttribute="leadingMargin" constant="-20" id="7xg-jc-5nK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9qQ-Go-fp3" secondAttribute="trailing" constant="-20" id="bCP-f1-mwl"/>
+                            <constraint firstItem="Xxk-Bb-DCi" firstAttribute="top" secondItem="9qQ-Go-fp3" secondAttribute="bottom" id="ciH-f9-Sxw"/>
+                            <constraint firstItem="9qQ-Go-fp3" firstAttribute="top" secondItem="tL7-P1-DMI" secondAttribute="bottom" id="n7K-nK-3AT"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="oly-9e-1AW"/>
+                    <connections>
+                        <outlet property="tableViewPlaceDetail" destination="9qQ-Go-fp3" id="AQ1-2K-LIh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ecF-Ve-ezY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="845" y="290"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XGS-r2-rEp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3QH-2Z-PGR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="agK-wN-41n">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="eDk-np-1jv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GnQ-zx-pNN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-731" y="-454"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hZA-7y-9Ax">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oRk-P3-SVx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HQm-7g-apv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="I4K-mU-CHz" kind="relationship" relationship="rootViewController" id="YZN-NV-1DU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mZr-Ww-ts2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1" y="-459"/>
         </scene>
     </scenes>
 </document>
